client side auth fix

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           document.getElementById('login-button').addEventListener('click', function() {
 
             var client_id = '8f0fea342c7940c4849add376865c309'; // Your client id
-            var redirect_uri = 'http://localhost/callback'; // Your redirect uri
+            var redirect_uri = 'http://spotinfinity.azurewebsites.net/callback'; // Your redirect uri
 
             var state = generateRandomString(16);
 
