--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                   <h1>{{display_name}}</h1>
                 </script>
 
+                <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
                 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 
                 <script>
@@ -85,6 +86,7 @@
                     };
 
                     var loggedInSource = document.getElementById('loggedin-template').innerHTML,
+                        loggedInTemplate = Handlebars.compile(loggedInSource),
                         loggedInPlaceholder = document.getElementById('loggedin');
 
                     var params = getHashParams();
@@ -104,7 +106,7 @@
                               'Authorization': 'Bearer ' + access_token
                             },
                             success: function(response) {
-                              loggedInPlaceholder.innerHTML = loggedInSource(response);
+                              loggedInPlaceholder.innerHTML = loggedUbTenokate(response);
 
                               $('#login').hide();
                               $('#loggedin').show();
