--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 
     <body>
 
+      <div id="content">
+
+      </div>
+
         <header id="header">
 
             <div id="bkgrd_dk">
@@ -47,6 +51,7 @@
                 <script id="loggedin-template" type="text/x-handlebars-template">
                   <img width="100" src="{{images.0.url}}" />
                   <h1>{{display_name}}</h1>
+                  <button id="top-tracks-button" class="btn">TOP TRACKS</button>
                 </script>
 
                 <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
@@ -140,6 +145,42 @@
                 })();
                 </script>
 
+                <script>
+                (function() {
+                  /**
+                   * Obtains parameters from the hash of the URL
+                   * @return Object
+                   */
+                  function getHashParams() {
+                    var hashParams = {};
+                    var e, r = /([^&;=]+)=?([^&;]*)/g,
+                        q = window.location.hash.substring(1);
+                    while ( e = r.exec(q)) {
+                       hashParams[e[1]] = decodeURIComponent(e[2]);
+                    }
+                    return hashParams;
+                  }
+                  var params = getHashParams();
+
+                  var access_token = params.access_token;
+
+
+                  document.getElementById('top-tracks-button').addEventListener('click', function() {
+                    $.ajax({
+                        url: 'https://api.spotify.com/v1/me/top/tracks',
+                        headers: {
+                          'Authorization': 'Bearer ' + access_token
+                        },
+                        success: function(response) {
+                          document.getElementById('content').innetHTML.write(response);
+                        }
+                    });
+                  }, false);
+
+
+                })
+                </script>
+
               </div>
 
               <div id="bkgrd_dk_a">
@@ -211,7 +252,9 @@
         </header>
 
         <!-- End #header -->
-
+        <div id="content">
+            <p>Please work</p>
+        </div>
 
         <footer id="footer">
 
