--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 </div>
 
                 <script id="loggedin-template" type="text/x-handlebars-template">
+                  <button id="top-tracks-button" class="btn">TOP TRACKS</button>
                   <img width="100" src="{{images.0.url}}" />
                   <h1>{{display_name}}</h1>
                 </script>
