--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
                               document.getElementById('top-tracks-button').addEventListener('click', function() {
                                 $.ajax({
-                                    url: 'https://api.spotify.com/v1/me/top/tracks',
+                                    url: 'https://api.spotify.com/v1/me',
                                     headers: {
                                       'Authorization': 'Bearer ' + access_token
                                     },
