--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                       'Authorization': 'Bearer ' + access_token
                                     },
                                     success: function(response) {
-                                      document.getElementById('content').innetHTML.write(response);
+                                      document.getElementById('content').innerHTML.write(response);
                                     }
                                 });
                               }, false);
