--- a/index.html
+++ b/index.html
@@ -1,252 +1,85 @@
-
 <!doctype html>
 
-<!--[if IE 8 ]>    <html lang="en" class="no-js lt-ie9 lt-ie8">    <![endif]-->
-
-<!--[if IE 9 ]>    <html lang="en" class="no-js lt-ie9>    <![endif]-->
-
-<!--[if (gt IE 9)|!(IE)]><!-->
-
-<html lang="en" class="no-js">
-
-<!--<![endif]-->
-
-    <head>
-
-        <meta charset="utf-8">
-
-
-        <title>Prototype</title>
-
-
-        <meta name="description" content="">
-
-        <meta name="keywords" content="">
-
-        <meta name="author" content="">
-
-
-
-        <link rel="stylesheet" href="css/style.css" type="text/css">
-
-    </head>
-
-    <body>
-
-      <div id="content">
-      </div>
-
-      <script id="loggedin-template" type="text/x-handlebars-template">
-        <button id="top-tracks-button" class="btn">SAVED TRACKS</button>
-        <img width="100" src="{{images.0.url}}" />
-        <h1>{{display_name}}</h1>
-      </script>
-
-
-        <header id="header">
-
-            <div id="bkgrd_dk">
-
-              <div id="bkgrd_dk_z">
-                <div id="login">
-                  <button id="login-button" class="btn">Log in with Spotify</button>
-                </div>
-                <div id="loggedin">
-                </div>
-
-                <script id="loggedin-template" type="text/x-handlebars-template">
-                  <button id="top-tracks-button" class="btn">TOP TRACKS</button>
-                  <img width="100" src="{{images.0.url}}" />
-                  <h1>{{display_name}}</h1>
-                </script>
-
-                <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
-                <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-
-                <script>
-                  (function() {
-                    var stateKey = 'spotify_auth_state';
-
-                    /**
-                     * Obtains parameters from the hash of the URL
-                     * @return Object
-                     */
-                    function getHashParams() {
-                      var hashParams = {};
-                      var e, r = /([^&;=]+)=?([^&;]*)/g,
-                          q = window.location.hash.substring(1);
-                      while ( e = r.exec(q)) {
-                         hashParams[e[1]] = decodeURIComponent(e[2]);
-                      }
-                      return hashParams;
-                    }
-
-                    /**
-                     * Generates a random string containing numbers and letters
-                     * @param  {number} length The length of the string
-                     * @return {string} The generated string
-                     */
-                    function generateRandomString(length) {
-                      var text = '';
-                      var possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-
-                      for (var i = 0; i < length; i++) {
-                        text += possible.charAt(Math.floor(Math.random() * possible.length));
-                      }
-                      return text;
-                    };
-
-                    var loggedInSource = document.getElementById('loggedin-template').innerHTML,
-                        loggedInTemplate = Handlebars.compile(loggedInSource),
-                        loggedInPlaceholder = document.getElementById('loggedin');
-
-                    var params = getHashParams();
-
-                    var access_token = params.access_token,
-                        state = params.state,
-                        storedState = localStorage.getItem(stateKey);
-
-                    if (access_token && (state == null || state !== storedState)) {
-                      alert('There was an error during the authentication');
-                    } else {
-                      //localStorage.removeItem(stateKey);
-                      if (access_token) {
-                        $.ajax({
-                            url: 'https://api.spotify.com/v1/me',
-                            headers: {
-                              'Authorization': 'Bearer ' + access_token
-                            },
-                            success: function(response) {
-                              loggedInPlaceholder.innerHTML = loggedInTemplate(response);
-
-                              $('#login').hide();
-                              $('#loggedin').show();
-
-                              document.getElementById('top-tracks-button').addEventListener('click', function() {
-                                $.ajax({
-                                    url: 'https://api.spotify.com/v1/me/top/tracks',
-                                    headers: {
-                                      'Authorization': 'Bearer ' + access_token
-                                    },
-                                    success: function(response) {
-                                      print(response);
-                                    }
-                                });
-                              }, false);
-                            }
-                          });
-                        } else {
-                          $('#login').show();
-                          $('#loggedin').hide();
-                        }
-
-                        document.getElementById('login-button').addEventListener('click', function() {
-                          var client_id = '8f0fea342c7940c4849add376865c309'; // Your client id
-                          var redirect_uri = 'http://spotinfinity.azurewebsites.net/'; // Your redirect uri
-
-                          var state = generateRandomString(16);
-
-                          localStorage.setItem(stateKey, state);
-                          var scope = 'user-read-private user-read-email user-top-read';
-
-                          var url = 'https://accounts.spotify.com/authorize';
-                          url += '?response_type=token';
-                          url += '&client_id=' + encodeURIComponent(client_id);
-                          url += '&scope=' + encodeURIComponent(scope);
-                          url += '&redirect_uri=' + encodeURIComponent(redirect_uri);
-                          url += '&state=' + encodeURIComponent(state);
-
-                          window.location = url;
-                        }, false);
-
-                      }
-
-                })();
-                </script>
-
-              </div>
-
-              <div id="bkgrd_dk_a">
-                <H3>Search</H3>
-
-                <form class="search" action="#" method="get">
-                  <button class="search-btn">
-                    <input name="q" class="search-box" type="text" placeholder="search" />
-                  </button>
-                </form>
-
-              <!-- End .search -->
-              </div>
-
-
-            <div id="bkgrd_dk_b">
-
-
-		<H3>Search Presets</H3>
-
-
-                <div class="btn"><p>Rock</p></div>
-
-		<div class="btn_offset"><p>Pop</p></div>
-
-
-                <div class="btn"><p>RnB</p></div>
-
-		<div class="btn_offset"><p>Alternate</p></div>
-
-
-                <div class="btn"><p>Jazz</p></div>
-
-		<div class="btn_offset"><p>Classic</p></div>
-
-
-		<div class="btn"><p>Country</p></div>
-
-		<div class="btn_offset"><p>Dance</p></div>
-
-
-		<div class="btn"><p>Electronic</p></div>
-
-		<div class="btn_offset"><p>Indie</p></div>
-
-
-            </div>
-
-
-            <div id="bkgrd_dk_c">
-
-
-                <div class="btn_sq"><p>Albums</p></div>
-
-		<div class="btn_sq_offset"><p>Singles</p></div>
-
-
-                <div class="btn_rctgl"><p>Artists</p></div>
-
-		<div class="btn_rctgl"><p>Songs</p></div>
-
-
-            </div>
-
-            </div>
-
-
-
-        </header>
-
-        <!-- End #header -->
-        <div id="content">
-            <p>Please work</p>
+<html>
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
+  <script>
+    $(function(){
+      $.ajax({
+        url: 'https://api.spotify.com/v1/me',
+        headers: {
+          'Authorization' : 'Bearer ' + localStorage.getItem('access_token')
+        },
+        success: function(response) {
+          var userProfileTemplate = Handlebars.compile($('#user-profile-template').html());
+          response.display_name = response.display_name.split(' ')[0];
+          $('#bkgrd_dk_a').html(userProfileTemplate(response))
+          $('#logout-button').click(function(){
+            localStorage.clear();
+            window.location = 'http://spotinfinity.azurewebsites.net/login.html';
+          })
+        },
+        error: function() {
+          localStorage.clear();
+          window.location = 'http://spotinfinity.azurewebsites.net/login.html';
+        }
+      });
+    });
+  </script>
+
+  <head>
+    <title>Spotinfinity</title>
+
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="">
+
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+  </head>
+
+  <body>
+    <header id="header">
+      <div id="bkgrd_dk">
+        <div id="bkgrd_dk_a"> <!-- User profile -->
+        </div> <!-- End of user profile -->
+
+        <div id="bkgrd_dk_b">
+          <H3>Search Presets</H3>
+
+          <div class="btn"><p>Rock</p></div>
+          <div class="btn_offset"><p>Pop</p></div>
+
+          <div class="btn"><p>RnB</p></div>
+          <div class="btn_offset"><p>Alternate</p></div>
+
+          <div class="btn"><p>Jazz</p></div>
+          <div class="btn_offset"><p>Classic</p></div>
+
+          <div class="btn"><p>Country</p></div>
+          <div class="btn_offset"><p>Dance</p></div>
+
+          <div class="btn"><p>Electronic</p></div>
+          <div class="btn_offset"><p>Indie</p></div>
         </div>
 
-        <footer id="footer">
+        <div id="bkgrd_dk_c">
+          <div class="btn_sq"><p>Albums</p></div>
+          <div class="btn_sq_offset"><p>Singles</p></div>
 
+          <div class="btn_rctgl"><p>Artists</p></div>
+          <div class="btn_rctgl"><p>Songs</p></div>
+        </div>
+      </div>
+    </header> <!-- End #header -->
 
-        </footer>
+    <footer id="footer">
+    </footer> <!-- End #header -->
+  </body>
 
-        <!-- End #header -->
-
-
-    </body>
-
+  <script id='user-profile-template' type='text/x-handlebars-template'>
+    <h1>Hello, {{display_name}}</h1>
+    <img width='100' src='{{images.0.url}}' />
+    <button id='logout-button'>Log out</button>
+  </script>
 </html>
