--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
         </div>
 
         <div id="bkgrd_dk_c">
-          <div class="btn_sq"><p>Albums</p></div>
-          <div class="btn_sq_offset"><p>Singles</p></div>
+          <div class="btn_sq"><pp>Albums</pp></div>
+          <div class="btn_sq_offset"><pp>Singles</pp></div>
 
-          <div class="btn_rctgl"><p>Artists</p></div>
-          <div class="btn_rctgl"><p>Songs</p></div>
+          <div class="btn_rctgl"><pp>Artists</pp></div>
+          <div class="btn_rctgl"><pp>Songs</pp></div>
         </div>
       </div>
     </header> <!-- End #header -->
