--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         }
       });
       $.ajax({
-        url: 'https://api.spotify.com/v1/audio-features/05KfyCEE6otdlT1pp2VIjP',
+        //url: 'https://api.spotify.com/v1/audio-features/05KfyCEE6otdlT1pp2VIjP',
+        url: 'https://api.spotify.com/v1/recommendations',
         headers: {
           'Authorization' : 'Bearer ' + localStorage.getItem('access_token')
         },
