--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       });
       $.ajax({
         //url: 'https://api.spotify.com/v1/audio-features/05KfyCEE6otdlT1pp2VIjP',
-        url: 'https://api.spotify.com/v1/recommendations',
+        url: 'https://api.spotify.com/v1/recommendations?seed_tracks=0c6xIDDpzE81m2q797ordA',
         headers: {
           'Authorization' : 'Bearer ' + localStorage.getItem('access_token')
         },
