--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       $.ajax({
         //url: 'https://api.spotify.com/v1/audio-features/05KfyCEE6otdlT1pp2VIjP',
         //url: 'https://api.spotify.com/v1/recommendations?seed_tracks=0c6xIDDpzE81m2q797ordA',
-        url: 'https://api.spotify.com/v1/search?q=tania&type=artist',
+        url: 'https://api.spotify.com/v1/search?q=tania&type=track',
         headers: {
           'Authorization' : 'Bearer ' + localStorage.getItem('access_token')
         },
