--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
           <div class="btn_offset"><p>Indie</p></div>
         </div>
 
-        <div id="bkgrd_dk_c">
-          <div class="btn_sq"><p>Albums</p></div>
-          <div class="btn_sq_offset"><p>Singles</p></div>
+        <div id="bkgrd_dk_b">
+          <div class="btn"><p>Albums</p></div>
+          <div class="btn_offset"><p>Singles</p></div>
 
-          <div class="btn_rctgl"><p>Artists</p></div>
-          <div class="btn_rctgl"><p>Songs</p></div>
+          <div class="btn"><p>Artists</p></div>
+          <div class="btn_offset"><p>Songs</p></div>
         </div>
       </div>
     </header> <!-- End #header -->
