--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
         </div>
       </div>
     </header> <!-- End #header -->
+    
+    <main id="main">
+      
+    </main>
 
     <footer id="footer">
     </footer> <!-- End #header -->
