--- a/index.html
+++ b/index.html
@@ -92,5 +92,7 @@
     <h1>Hello, {{display_name}}</h1>
     <img width='100' src='{{images.0.url}}' />
     <button id='logout-button'>Log out</button>
+    <button id='plalist-create-button'>Create Playlist</button>
+    <button id='add-to-button'>Add to Plalist</button>
   </script>
 </html>
