--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@
     <img width='100' src='{{images.0.url}}' />
     <button id='logout-button'>Log out</button>
     <button id='plalist-create-button'>Create Playlist</button>
-    <button id='add-to-button'>Add to Plalist</button>
+    <button id='add-to-button'>Add to Playlist</button>
   </script>
 </html>
