--- a/index.html
+++ b/index.html
@@ -226,7 +226,16 @@
     </div>
 
     <footer id="footer">
-      <span id='user-msg'>asdasdasd</span>
+      <section id="getInTouch">
+          <a>Get In Touch!</a><br>
+          <a>info@spotinfinity.co.uk</a><br>
+          <a>01224642266</a><br><br>
+          <a>123 Music Mound</a><br>
+          <a>Aberdeen</a><br>
+          <a>AB24 4CH</a>
+      </section>
+      <section id="aboutUs"></section>
+      <span id='user-msg'></span>
     </footer> <!-- End #footer -->
   </body>
 
