--- a/index.html
+++ b/index.html
@@ -234,8 +234,12 @@
           <a>Aberdeen</a><br>
           <a>AB24 4CH</a>
       </section>
-      <section id="aboutUs"></section>
-      <span id='user-msg'></span>
+      <section id="aboutUs">
+        <a>About Us</a><br>
+        <a>Spotinfinity: a web app which allows you to </a><br>
+        <a>build a playlist to your Spotify account using</a><br>
+        <a>recommendations on your favourite music</a>
+      </section>
     </footer> <!-- End #footer -->
   </body>
 
