--- a/login.html
+++ b/login.html
@@ -9,8 +9,8 @@
 
   <body>
     <h1 id="loading">Loading...</h1>
-    <div id="login-page">
-      <button id="login-button" style="display: none;">Log in with Spotify</button>
+    <div id="login-page" style="display: none;">
+      <button id="login-button">Log in with Spotify</button>
     </div>
   </body>
 
