--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <h1 id="loading">Loading...</h1>
     <div id="login-page" style="display: none;">
       <button id="login-button">Log in with Spotify</button>
-      <img src="img/spotinfinityLogo.png"/>
+      <img id="logo" src="img/spotinfinityLogo.png"/>
     </div>
   </body>
 
