--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
   <body>
     <h1 id="loading">Loading...</h1>
     <div id="login-page" style="display: none;">
-      <img id="logo" src="img/spotinfinityLogo.png"/>
+      <img id="logo" src="img/spotinfinityLogo.png"/><br>
       <button id="login-button">Log in with Spotify</button>
     </div>
   </body>
