--- a/login.html
+++ b/login.html
@@ -12,6 +12,25 @@
     <div id="login-page" style="display: none;">
       <img id="logo" src="img/spotinfinityLogo.png"/><br>
       <button id="login-button">Log in with Spotify</button>
+      
+      <footer id="footer">
+      <section id="getInTouch">
+          <a>Get In Touch!</a><br>
+          <a></a><br>
+          <a>info@spotinfinity.co.uk</a><br>
+          <a>01224642266</a><br><br>
+          <a>123 Music Mound</a><br>
+          <a>Aberdeen</a><br>
+          <a>AB24 4CH</a>
+      </section>
+      <section id="aboutUs">
+        <a>About Us</a><br>
+        <a></a><br>
+        <a>Spotinfinity: a web app which allows you to </a><br>
+        <a>build a playlist to your Spotify account using</a><br>
+        <a>recommendations on your favourite music</a>
+      </section>
+    </footer> <!-- End #footer -->
     </div>
   </body>
 
