--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1 id="loading">Loading...</h1>
-    <div id="login-page" style="display: none;">
+    <div id="login-page">
       <img id="logo" src="img/spotinfinityLogo.png"/><br>
       <button id="login-button">Log in with Spotify</button>
       
