--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <script src='http://code.jquery.com/jquery-1.11.2.min.js'></script>
   </head>
 
-  <body1>
+  <body>
     <h1 id="loading">Loading...</h1>
     <div id="login-page">
       <img id="logo" src="img/spotinfinityLogo.png"/><br>
@@ -32,7 +32,7 @@
       </section>
     </footer> <!-- End #footer -->
     </div>
-  </body1>
+  </body>
 
   <script>
     var stateKey = 'spotify_auth_state'; // localStorage key for auth state
