--- a/login.html
+++ b/login.html
@@ -15,13 +15,13 @@
       
       <footer id="footer">
       <section id="getInTouch">
-          <a>Get In Touch!</a><br>
-          <a></a><br>
-          <a>info@spotinfinity.co.uk</a><br>
-          <a>01224642266</a><br><br>
-          <a>123 Music Mound</a><br>
-          <a>Aberdeen</a><br>
-          <a>AB24 4CH</a>
+          Get In Touch!<br>
+          <br>
+          info@spotinfinity.co.uk<br>
+          01224642266<br><br>
+          123 Music Mound<br>
+          Aberdeen<br>
+          AB24 4CH
       </section>
       <section id="aboutUs">
         <a>About Us</a><br>
@@ -29,6 +29,9 @@
         <a>Spotinfinity: a web app which allows you to </a><br>
         <a>build a playlist to your Spotify account using</a><br>
         <a>recommendations on your favourite music</a>
+      </section>
+      <section id="socialMedia">
+        
       </section>
     </footer> <!-- End #footer -->
     </div>
