--- a/login.html
+++ b/login.html
@@ -31,7 +31,10 @@
         <a>recommendations on your favourite music</a>
       </section>
       <section id="socialMedia">
-        
+        <a href="www.facebook.com" class="icon-link facebook">
+        <i class="fa fa-facebook">
+          ::before
+          </i></a>
       </section>
     </footer> <!-- End #footer -->
     </div>
