--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
   <body>
     <h1 id="loading">Loading...</h1>
     <div id="login-page">
-      <img id="logo" src="img/spotinfinityLogo.png"/><br>
+      <img id="logo" src="img/spotinfinityLogo.png"><br>
       <button id="login-button">Log in with Spotify</button>
       
       <footer id="footer">
@@ -32,9 +32,7 @@
       </section>
       <section id="socialMedia">
         <a href="https://www.facebook.com" class="icon-link facebook">
-        <i class="fa fa-facebook">
-          ::before
-          </i></a>
+        <img src="img/fbLogo.png"></a>
       </section>
     </footer> <!-- End #footer -->
     </div>
