--- a/login.html
+++ b/login.html
@@ -31,8 +31,10 @@
         <a>recommendations on your favourite music</a>
       </section>
       <section id="socialMedia">
-        <a href="https://www.facebook.com" class="icon-link facebook">
-        <img src="img/fbLogo.png"></a>
+        <a href="https://www.facebook.com">
+        <img src="img/fbLogo.png" width="80px" height="80px"></a>
+        <a href="https://www.twitter.com">
+        <img src="img/twitterLogo.png" width="80px" height="80px"></a>
       </section>
     </footer> <!-- End #footer -->
     </div>
