--- a/login.html
+++ b/login.html
@@ -24,13 +24,14 @@
           AB24 4CH
       </section>
       <section id="aboutUs">
-        <a>About Us</a><br>
-        <a></a><br>
-        <a>Spotinfinity: a web app which allows you to </a><br>
-        <a>build a playlist to your Spotify account using</a><br>
-        <a>recommendations on your favourite music</a>
+        About Us<br>
+        <br>
+        Spotinfinity: a web app which allows you to <br>
+        build a playlist to your Spotify account using<br>
+        recommendations on your favourite music
       </section>
       <section id="socialMedia">
+        Find us on social media!<br>
         <a href="https://www.facebook.com">
         <img src="img/fbLogo.png" width="40px" height="40px"></a>
         <a href="https://www.twitter.com">
