--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
         recommendations on your favourite music
       </section>
       <section id="socialMedia">
-        Find us on social media!<br>
+        Find us on social media!<br><br>
         <a href="https://www.facebook.com">
         <img src="img/fbLogo.png" width="40px" height="40px"></a>
         <a href="https://www.twitter.com">
