--- a/login.html
+++ b/login.html
@@ -1,17 +1,30 @@
 <!doctype html>
 
+    <div class="wrapper">
+        <p>Your website content here.</p>
+        <div class="push"></div>
+    </div>
+    <div class="footer">
+        <p>Website Footer Here.</p>
+    </div>
+
+
 <html>
   <head>
     <title>Welcome to Spotinfinity</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/layout.css" type="text/css">
     <script src='http://code.jquery.com/jquery-1.11.2.min.js'></script>
   </head>
 
   <body>
+    <div class="wrapper">
     <h1 id="loading">Loading...</h1>
     <div id="login-page">
       <img id="logo" src="img/spotinfinityLogo.png"><br>
       <button id="login-button">Log in with Spotify</button>
+      </div>
+      <div class="push"></div>
     </div>
   </body>
   <footer id="footer">
